# jetson-inference

./: CMakeLists.txt
bench/: CMakeLists.txt  inference_bench.cpp  nvme_bench.cpp
cmake/: FindLiburing.cmake  JetsonArch.cmake
configs/: jetson-orin-nano.yaml  llama-70b.yaml  llama-8b.yaml
cuda/: CMakeLists.txt  attention_kernel.cu  cuda_utils.cuh  dequant_kernels.cu  matmul_kernels.cu  rmsnorm_kernel.cu  rope_kernel.cu  silu_kernel.cu  softmax_kernel.cu  sparse_matmul.cu
include/jinf/: activation_predictor.h  buffer_pool.h  common.h  engine.h  gguf.h  nvme_io.h  nvmw.h  predictor.h  quant.h  sparse_ops.h  splitter.h
scripts/: benchmark_inference.sh  benchmark_nvme.sh
src/: CMakeLists.txt  activation_predictor.cpp  buffer_pool.cpp  common.cpp  engine.cpp  gguf.cpp  nvme_io.cpp  nvmw.cpp  predictor.cpp  quant.cpp  splitter.cpp
tests/: CMakeLists.txt  test_activation_predictor.cpp  test_buffer_pool.cpp  test_engine.cpp  test_gguf.cpp  test_nvme_io.cpp  test_sparse_matmul.cpp  test_splitter.cpp
tools/: CMakeLists.txt  gguf_inspect.cpp  prepare_model.cpp  profile_activations.cpp  train_predictor.cpp
